--- a/HeatExchangeCalculator/Pages/Shared/_Layout.cshtml
+++ b/HeatExchangeCalculator/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,36 @@
                     </ul>
                 </div>
             </div>
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+                <div class="container">
+                    <a class="navbar-brand" asp-area="" asp-controller="HeatExchange" asp-action="Index">
+                        <i class="bi bi-thermometer-sun"></i> Теплообмен
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target=".navbar-collapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="HeatExchange" asp-action="Calculate">
+                                    <i class="bi bi-calculator"></i> Расчет
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="HeatExchange" asp-action="SavedCalculations">
+                                    <i class="bi bi-archive"></i> Сохраненные
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="HeatExchange" asp-action="About">
+                                    <i class="bi bi-info-circle"></i> О программе
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </nav>
     </header>
     <div class="container">
